# nugget

./: 90-min-scc.scm  Makefile  Readme.markdown  notes.txt  nugget.cabal  nugget.hs  run-tests.sh
90-min-scc/: 90-min-scc.scm
benchmarks/: csi-boyer.scm
benchmarks/chicken/: ack.scm  array1.scm  browse.scm  cat.scm  cpstak.scm  ctak.scm  deriv.scm  destruc.scm  diviter.scm  divrec.scm  fib.scm  fibc.scm  fibfp.scm  gcbench.scm  mperm.scm  nboyer-test.scm  nboyer.scm  nqueens.scm  ntakl.scm  peval.scm  puzzle.scm  run.sh  sboyer.scm  simplex.scm  string.scm  sum1.scm  tail.scm  tak.scm  takl.scm  triangl.scm  wc.scm
c-so-loading/: Makefile  lib1.c  lib2.c  main-rtl.c  main.c
cheney-on-the-mta/: CheneyMTA.html  cboyer13.c
compiling-scheme-to-c/: TODO  jae.scm  readme.txt  run.sh  test.scm
compiling-scheme-to-c/tests/: app.scm  begin.scm  if.scm  lambda.scm  prim.scm  set.scm  square.scm
cps-conversion/: README  lc-convert.rkt  lc-convert.scm  lc-ho-convert.rkt  lc-ho-convert.scm  lc-hybrid.rkt  lc-partition.rkt  scheme-cps-convert.rkt
cyclone/: Makefile  README.md  TODO  TODO.txt  bootstrap-chicken.scm  bootstrap-husk.scm  call-cc-debug.c  cgen.scm  compiler-int-dev.scm  compiler.scm  cyc  cyc-debug  cyclone.scm  dev.scm  eval.scm  gc-loop-testing.c  gc-testing.c  map.scm  parser.scm  pass.sh  repl.scm  run.sh  runtime.h  test.scm  tmp.scm  trans.scm
cyclone/c-matt-might/: scheme.h
cyclone/examples/: app.c  closure-1.c  cmd-line-csi.scm  repl.scm  tail-call-testing.scm  unit-test-trans.scm
cyclone/mta/: cgen.scm  runtime-footer.c  runtime-header.c  runtime.c  runtime.h  runtime.scm
cyclone/mta/examples/: TODO.txt  closure-1.c  closure-1.scm  simple-if.c
cyclone/tests/: _tmp.scm  adder.scm  apply.scm  call-cc-set.scm  call-cc-simple.scm  call-cc.scm  closure-sub.scm  fac.scm  get-down-on-it.scm  if.scm  one-liners.scm  quote.scm  recursion.scm  scoping.scm  set.scm  simple-if.scm  square.scm  strings.scm  unit-tests.scm
experimental/: Makefile
gc/: Makefile  align.c  atomics.c  heap.h  main.c  storm-gc.h  types.h
hs/: Makefile  code-gen.scm  hnc.hs  nugget.hs
hs/tests/: 01-simple.scm  02-basic-function.scm
lib/: nugget.scm
nugget/: Makefile  TODO  closure-1.scm  compiler.scm  run.sh  tmp-test.c  tmp.scm  trans.scm
nugget/c-matt-might/: cgen.scm
nugget/c-mta/: Makefile  cgen.scm  runtime.c  runtime.scm
nugget/examples/: display.out
nugget/mta/: cgen.scm
nugget/mta/examples/: TODO.txt  simple-if.c
nugget/tests/: app.scm  call-cc.scm  closure-test-cases.scm  display.scm  lambda.scm  recursion.scm  set.scm
tests/: 00-simplest.scm  01-simple.scm  02-basic-function.scm  04-macro-begin.scm  04-macro-full.scm  04-macro-let.scm  04-macro-simple.scm  04-macro.scm  adder.scm
