Name:                nugget
Version:             0.1
Synopsis:            A tiny Scheme compiler
Description:         
  A compiler for a tiny subset of the Scheme language.

License:             MIT
--License-file:        LICENSE
Author:              Justin Ethier
Maintainer:          Justin Ethier <github.com/justinethier>
--Homepage:            http://justinethier.github.com/husk-scheme
--Bug-Reports:         http://github.com/justinethier/husk-scheme/issues
Cabal-Version:       >= 1.8
Build-Type:          Simple
Category:            Compilers/Interpreters, Language
Tested-with:         GHC == 7.4.1

-- Extra-Source-Files:  README.markdown
--                      ChangeLog.markdown
--                      LICENSE
--                      AUTHORS

Data-Files:          lib/*.scm

Source-Repository head
    Type:            git
    Location:        git://github.com/justinethier/nugget.git

Executable         nsc
  Build-Depends:   husk-scheme, base >= 2.0 && < 5, array, containers, filepath, mtl, process 
  Main-is:         nugget.hs
--  Hs-Source-Dirs:  hs-src/Interpreter

